# pyproject.toml

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ionosense-hpc"
version = "0.1.0"
description = "High-performance CUDA FFT engine + Python bindings for real-time ULF/VLF signal processing."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Kevin Rahsaz", email = "rahsaz.kevin@gmail.com" }]

dependencies = [
  "numpy>=1.24,<2",
  "pynvml>=11.5",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-xdist>=3.5",
  "pytest-timeout>=2.3",
  "build>=1.2",
  "wheel>=0.43",
  "ruff>=0.4",
  "mypy>=1.10",
]

[project.urls]
Homepage = "https://github.com/uw-seal/ionosense-hpc-lib"

[tool.setuptools]
package-dir = { "" = "python/src" }
# If you ever add MANIFEST.in and want it respected, you can set:
# include-package-data = true

[tool.setuptools.packages.find]
where = ["python/src"]
include = ["ionosense_hpc*"]
exclude = ["ionosense_hpc.tests*"]

# ✅ Keys must be python module names. Patterns are relative to that package dir.
[tool.setuptools.package-data]
"ionosense_hpc" = [
  "py.typed",
  ".libs/windows/*.dll",
  ".libs/linux/*.so",
]
"ionosense_hpc.core" = [
  "_engine*.pyd",
  "_engine*.so",
]

[tool.setuptools.exclude-package-data]
"ionosense_hpc" = ["tests/*", "__pycache__/*", "*.pyc"]
