# pyproject.toml
# Consolidated configuration following PEP 621 and modern RSE standards.
# This file serves as the single source of truth for build, packaging,
# and tool configurations.

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

# --- Project Metadata (PEP 621) ---
[project]
name = "ionosense-hpc"
version = "0.1.0"
description = "High-performance CUDA FFT engine + Python bindings for real-time ULF/VLF signal processing."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Kevin Rahsaz", email = "rahsaz.kevin@gmail.com" }]
keywords = ["fft", "cuda", "signal processing", "hpc", "real-time"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
]

dependencies = [
  "numpy==1.26.4",
  "pynvml>=11.5",
  "pydantic>=2.0",
  "scipy==1.13.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-xdist>=3.5",
  "pytest-timeout>=2.3",
  "pytest-cov>=4.1",  # Added for coverage
  "build>=1.2",
  "wheel>=0.43",
  "ruff>=0.4",
  "mypy>=1.10",
  "types-setuptools",
]
export = [
  "h5py>=3.10",
  "pandas>=2.0",
  "matplotlib>=3.6",
]
benchmark = [
  "pandas>=2.0",
  "matplotlib>=3.6",
  "seaborn>=0.12",
  "tabulate>=0.9",
]
full = [
  "ionosense-hpc[dev,export,benchmark]",
]

[project.urls]
Homepage = "https://github.com/SEAL-Embedded/ionosense-hpc-lib"
Documentation = "https://github.com/SEAL-Embedded/ionosense-hpc-lib/tree/main/docs"
"Bug Tracker" = "https://github.com/SEAL-Embedded/ionosense-hpc-lib/issues"

[project.scripts]
ionosense-bench = "ionosense_hpc.benchmarks.suite:main"

# --- Build System & Packaging Configuration (setuptools) ---
[tool.setuptools]
package-dir = { "" = "python/src" }
zip-safe = false

[tool.setuptools.packages.find]
where = ["python/src"]
include = ["ionosense_hpc*"]
exclude = ["ionosense_hpc.tests*"]

[tool.setuptools.package-data]
"ionosense_hpc" = [
  "py.typed",
  ".libs/windows/*.dll",
  ".libs/linux/*.so",
]
"ionosense_hpc.core" = [
  "_engine*.pyd",
  "_engine*.so",
]

# --- Code Quality & Linting (Ruff) ---
[tool.ruff]
target-version = "py311"
line-length = 100
src = ["python/src", "python/tests"]

select = [
  "E",   # pycodestyle errors
  "W",   # pycodestyle warnings
  "F",   # pyflakes
  "I",   # isort
  "UP",  # pyupgrade
  "B",   # flake8-bugbear
  "C4",  # flake8-comprehensions
  "SIM", # flake8-simplify
  "TID", # flake8-tidy-imports
  "ARG", # flake8-unused-arguments
]
ignore = [
  "E501",  # line too long (handled by formatter)
  "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.isort]
known-first-party = ["ionosense_hpc"]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401", "E402"]
"python/tests/*" = ["B", "SIM", "ARG001", "ARG002"]

# --- Static Type Checking (Mypy) ---
[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
check_untyped_defs = true
no_implicit_optional = true
show_error_codes = true
explicit_package_bases = true
package_path = "python/src"

[[tool.mypy.overrides]]
module = [
  "pynvml.*",
  "scipy.*",
  "pandas.*",
  "matplotlib.*",
  "seaborn.*",
  "tabulate.*",
]
ignore_missing_imports = true

# --- Test Runner Configuration (Pytest) ---
[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["python/tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = [
  "--import-mode=importlib",
  "--color=yes",
  "-ra", # show extra test summary info
  "--strict-markers",
  "--tb=short",
  "--cov=ionosense_hpc", # Enable coverage for our package
  "--cov-report=term-missing",
]
markers = [
  "config: tests for the configuration module",
  "signals: tests for the signal generation utilities",
  "core: tests for the core engine wrappers",
  "gpu: tests requiring a GPU (use --gpu flag to enable)",
  "slow: slow tests (> 5 seconds)",
  "benchmark: benchmark tests",
]
xfail_strict = true
filterwarnings = [
  "error",
  'ignore::DeprecationWarning:numpy',
  'ignore::DeprecationWarning:pkg_resources',
  'ignore::ResourceWarning',
  'ignore::RuntimeWarning',
  'ignore::UserWarning',
]
log_cli = true
log_cli_level = "INFO"

# --- Test Coverage Configuration (Coverage.py) ---
[tool.coverage.run]
source = ["ionosense_hpc"]
omit = [
    "*/__init__.py",
    "*/benchmarks/*", # Exclude benchmark scripts from coverage
]

[tool.coverage.report]
fail_under = 55  # Enforce a minimum coverage of 55% for now
show_missing = true
skip_covered = true
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]
