# pyproject.toml
# Modern configuration aligning the core library with the research workflow stack.
[build-system]
requires = [
  "scikit-build-core>=0.9",
  "pybind11>=2.11"
]
build-backend = "scikit_build_core.build"
# --- Project Metadata (PEP 621) ---
[project]
name = "sigtekx"
version = "0.9.4"
description = "SigTekX: GPU-accelerated signal processing pipeline builder with modern ML research tooling integration"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Kevin Rahsaz", email = "rahsaz.kevin@gmail.com" }]
keywords = ["fft", "cuda", "signal processing", "hpc", "real-time", "hydra", "dvc", "mlflow"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Operating System :: OS Independent",
  "Topic :: Scientific/Engineering",
]
dependencies = [
  "numpy==1.26.4",
  "nvidia-ml-py>=11.5",
  "pydantic>=2.0",
  "scipy==1.13.0",
]
[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-xdist>=3.5",
  "pytest-timeout>=2.3",
  "pytest-cov>=4.1",
  "ruff>=0.4",
  "mypy>=1.10",
  "types-setuptools",
  "pre-commit>=3.6",
  "build>=1.2",
  "wheel>=0.43",
]
benchmark = [
  "pandas>=2.0",
  "matplotlib>=3.6",
  "seaborn>=0.12",
  "scikit-learn>=1.3.0",  # For analysis: scaling analysis, metrics (r2_score, RMSE)
  "tabulate>=0.9",
  "tqdm>=4.66",
  "nvtx>=0.2.5",
  "colorama>=0.4.6",
]
visualization = [
  "plotly>=5.18",
  "streamlit>=1.30.0",
  "watchdog>=3.0",
  "kaleido>=0.2.1",
]
reporting = [
  "jinja2>=3.1",
  "markdown>=3.5",
  "weasyprint>=61.0",
]
workflow = [
  "hydra-core>=1.3.2",
  "hydra-optuna-sweeper>=1.2.0",
  "hydra-joblib-launcher>=1.2.0",
  "omegaconf>=2.3.0",
  "mlflow>=2.10.0",
  "dvc>=3.47.0",
  "dvc-data>=3.14.0",
  "snakemake>=8.0.0",
  "optuna>=2.10.0,<3.0.0",  # Compatible with hydra-optuna-sweeper
]
research = [
  "sigtekx[benchmark,visualization,reporting,workflow]",
  "jupyterlab>=4.1",
  "ipykernel>=6.29",
  "ipywidgets>=8.1",
  "papermill>=2.5",
  "nbconvert>=7.16",
]
export = [
  "h5py>=3.10",
  "sigtekx[benchmark,reporting]",
]
color = [
  "rich>=13.7",
  'colorama>=0.4.6; platform_system == "Windows"',
  "types-colorama",
]
full = [
  "sigtekx[dev,research]",
]
[project.urls]
Homepage = "https://github.com/SEAL-Embedded/sigtekx"
Documentation = "https://github.com/SEAL-Embedded/sigtekx/tree/main/docs"
"Bug Tracker" = "https://github.com/SEAL-Embedded/sigtekx/issues"
# --- Build System & Packaging Configuration ---
[tool.scikit-build]
cmake.version = ">=3.26"
build-dir = "build/skbuild"
cmake.args = [
  "-DSIGTEKX_WITH_PYTHON=ON",
  "-DSIGTEKX_WITH_TESTS=OFF",
  "-DSIGTEKX_WITH_CUDA=OFF",
]
[tool.scikit-build.wheel]
packages = ["src/sigtekx"]
[tool.scikit-build.sdist]
include = [
  "CMakeLists.txt",
  "CMakePresets.json",
  "cpp/src/**",
  "cpp/include/**",
  "cpp/bindings/**",
  "src/**",
  "benchmarks/**",
  "experiments/**",
  "scripts/**",
  "dvc.yaml",
  "README.md",
  "LICENSE*",
  "docs/**",
]
# --- Code Quality & Linting (Ruff) ---
[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests", "benchmarks", "experiments/scripts"]
[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "C4", "SIM", "TID", "ARG"]
ignore = ["E501", "B008"]
isort.known-first-party = ["sigtekx"]
[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "E402", "ARG002"]
"tests/*" = ["B", "SIM", "ARG001", "ARG002"]
[tool.ruff.format]
quote-style = "double"
indent-style = "space"
# --- Static Type Checking (Mypy) ---
[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
check_untyped_defs = true
no_implicit_optional = true
show_error_codes = true
explicit_package_bases = true
mypy_path = "src"
module = [
  "pynvml.*",
  "scipy.*",
  "pandas.*",
  "matplotlib.*",
  "seaborn.*",
  "tabulate.*",
  "nvtx.*",
  "tqdm.*",
  "hydra.*",
  "omegaconf.*",
  "mlflow.*",
  "dvc.*",
  "snakemake.*",
  "optuna.*",
]
ignore_missing_imports = true
# --- Test Runner Configuration (Pytest) ---
[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = [
  "--import-mode=importlib",
  "--color=yes",
  "-ra",
  "--strict-markers",
  "--tb=short",
  "--cov=sigtekx",
  "--cov-report=term-missing",
  "--cov-report=html:artifacts/reports/coverage",
]
markers = [
  "config: tests for the configuration module",
  "signals: tests for the signal generation utilities",
  "core: tests for the core engine wrappers",
  "gpu: tests requiring a GPU (use --gpu flag to enable)",
  "slow: slow tests (> 5 seconds)",
  "benchmark: benchmark tests",
  "integration: integration tests with external tools",
]
xfail_strict = true
filterwarnings = [
  "error",
  'ignore::DeprecationWarning:numpy',
  'ignore::DeprecationWarning:pkg_resources',
  'ignore::ResourceWarning',
  'ignore::RuntimeWarning',
  'ignore::UserWarning',
  "ignore:.*`nvtx` not installed.*:ImportWarning",
]
log_cli = true
log_cli_level = "INFO"
# --- Test Coverage Configuration ---
[tool.coverage.run]
source = ["sigtekx"]
omit = [
  "*/__init__.py",
  "*/benchmarks/*",
  "*/workflows/*",
]
[tool.coverage.report]
fail_under = 85
show_missing = true
skip_covered = true
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "if __name__ == .__main__.:",
  "raise NotImplementedError",
]
# --- DVC Configuration ---
[tool.dvc]
analytics = false
autostage = true
# --- Snakemake Configuration ---
[tool.snakemake]
use-conda = true
cores = 4
latency-wait = 30
